test/files/run/repl-errors.check

scala> '\060'
        ^
       error: octal escape literals are unsupported: use \u0030 instead

scala> def foo() { }
                 ^
       warning: procedure syntax is deprecated: instead, add `: Unit =` to explicitly declare `foo`'s return type
def foo(): Unit

scala> @annotation.nowarn def sshhh() { }
def sshhh(): Unit

scala> :quit
